--- a/ui/css/synced.css
+++ b/ui/css/synced.css
@@ -31,6 +31,10 @@ a:focus {
     text-decoration: none;
 }
 
+.container {
+    padding: 20px;
+}
+
 .import-data .bookmarks:before {
     background: transparent url(../media/icons/bookmarks.gif) 0 0 / 20px no-repeat;
 }
